content/kapacitor/v1.4/nodes/k8s_autoscale_node.md
---
title: K8sAutoscaleNode
note: Auto generated by tickdoc

menu:
  kapacitor_1_4:
    name: K8sAutoscaleNode
    identifier: k8s_autoscale_node
    weight: 180
    parent: nodes
---
### Constructor

| Chaining Method | Description |
|:---------|:---------|
| **[k8sAutoscale](#description)&nbsp;(&nbsp;)** | Create a node that can trigger autoscale events for a kubernetes cluster.  |

### Property Methods

| Setters | Description |
|:---|:---|
| **[cluster](#cluster)&nbsp;(&nbsp;`value`&nbsp;`string`)** | Cluster is the name of the Kubernetes cluster to use.  |
| **[currentField](#currentfield)&nbsp;(&nbsp;`value`&nbsp;`string`)** | CurrentField is the name of a field into which the current replica count will be set as an int. If empty no field will be set. Useful for computing deltas on the current state.  |
| **[decreaseCooldown](#decreasecooldown)&nbsp;(&nbsp;`value`&nbsp;`time.Duration`)** | Only one decrease event can be triggered per resource every DecreaseCooldown interval.  |
| **[increaseCooldown](#increasecooldown)&nbsp;(&nbsp;`value`&nbsp;`time.Duration`)** | Only one increase event can be triggered per resource every IncreaseCooldown interval.  |
| **[kind](#kind)&nbsp;(&nbsp;`value`&nbsp;`string`)** | Kind is the type of resources to autoscale. Currently only "deployments", "replicasets" and "replicationcontrollers" are supported. Default: "deployments"  |
| **[kindTag](#kindtag)&nbsp;(&nbsp;`value`&nbsp;`string`)** | KindTag is the name of a tag to use when tagging emitted points with the kind. If empty the point will not be tagged with the resource. Default: kind  |
| **[max](#max)&nbsp;(&nbsp;`value`&nbsp;`int64`)** | The maximum scale factor to set. If 0 then there is no upper limit. Default: 0, a.k.a no limit.  |
| **[min](#min)&nbsp;(&nbsp;`value`&nbsp;`int64`)** | The minimum scale factor to set. Default: 1  |
| **[namespace](#namespace)&nbsp;(&nbsp;`value`&nbsp;`string`)** | Namespace is the namespace of the resource, if empty the default namespace will be used.  |
| **[namespaceTag](#namespacetag)&nbsp;(&nbsp;`value`&nbsp;`string`)** | NamespaceTag is the name of a tag to use when tagging emitted points with the namespace. If empty the point will not be tagged with the resource. Default: namespace  |
| **[quiet](#quiet)&nbsp;(&nbsp;)** | Suppress errors during execution.  |
| **[replicas](#replicas)&nbsp;(&nbsp;`value`&nbsp;`ast.LambdaNode`)** | Replicas is a lambda expression that should evaluate to the desired number of replicas for the resource.  |
| **[resourceName](#resourcename)&nbsp;(&nbsp;`value`&nbsp;`string`)** | ResourceName is the name of the resource to autoscale.  |
| **[resourceNameTag](#resourcenametag)&nbsp;(&nbsp;`value`&nbsp;`string`)** | ResourceNameTag is the name of a tag that names the resource to autoscale.  |
| **[resourceTag](#resourcetag)&nbsp;(&nbsp;`value`&nbsp;`string`)** | ResourceTag is the name of a tag to use when tagging emitted points the resource. If empty the point will not be tagged with the resource. Default: resource  |



### Chaining Methods
[Alert](/kapacitor/v1.4/nodes/k8s_autoscale_node/#alert), [Barrier](/kapacitor/v1.4/nodes/k8s_autoscale_node/#barrier), [Bottom](/kapacitor/v1.4/nodes/k8s_autoscale_node/#bottom), [Combine](/kapacitor/v1.4/nodes/k8s_autoscale_node/#combine), [Count](/kapacitor/v1.4/nodes/k8s_autoscale_node/#count), [CumulativeSum](/kapacitor/v1.4/nodes/k8s_autoscale_node/#cumulativesum), [Deadman](/kapacitor/v1.4/nodes/k8s_autoscale_node/#deadman), [Default](/kapacitor/v1.4/nodes/k8s_autoscale_node/#default), [Delete](/kapacitor/v1.4/nodes/k8s_autoscale_node/#delete), [Derivative](/kapacitor/v1.4/nodes/k8s_autoscale_node/#derivative), [Difference](/kapacitor/v1.4/nodes/k8s_autoscale_node/#difference), [Distinct](/kapacitor/v1.4/nodes/k8s_autoscale_node/#distinct), [Ec2Autoscale](/kapacitor/v1.4/nodes/k8s_autoscale_node/#ec2autoscale), [Elapsed](/kapacitor/v1.4/nodes/k8s_autoscale_node/#elapsed), [Eval](/kapacitor/v1.4/nodes/k8s_autoscale_node/#eval), [First](/kapacitor/v1.4/nodes/k8s_autoscale_node/#first), [Flatten](/kapacitor/v1.4/nodes/k8s_autoscale_node/#flatten), [GroupBy](/kapacitor/v1.4/nodes/k8s_autoscale_node/#groupby), [HoltWinters](/kapacitor/v1.4/nodes/k8s_autoscale_node/#holtwinters), [HoltWintersWithFit](/kapacitor/v1.4/nodes/k8s_autoscale_node/#holtwinterswithfit), [HttpOut](/kapacitor/v1.4/nodes/k8s_autoscale_node/#httpout), [HttpPost](/kapacitor/v1.4/nodes/k8s_autoscale_node/#httppost), [InfluxDBOut](/kapacitor/v1.4/nodes/k8s_autoscale_node/#influxdbout), [Join](/kapacitor/v1.4/nodes/k8s_autoscale_node/#join), [K8sAutoscale](/kapacitor/v1.4/nodes/k8s_autoscale_node/#k8sautoscale), [KapacitorLoopback](/kapacitor/v1.4/nodes/k8s_autoscale_node/#kapacitorloopback), [Last](/kapacitor/v1.4/nodes/k8s_autoscale_node/#last), [Log](/kapacitor/v1.4/nodes/k8s_autoscale_node/#log), [Mean](/kapacitor/v1.4/nodes/k8s_autoscale_node/#mean), [Median](/kapacitor/v1.4/nodes/k8s_autoscale_node/#median), [Mode](/kapacitor/v1.4/nodes/k8s_autoscale_node/#mode), [MovingAverage](/kapacitor/v1.4/nodes/k8s_autoscale_node/#movingaverage), [Percentile](/kapacitor/v1.4/nodes/k8s_autoscale_node/#percentile), [Sample](/kapacitor/v1.4/nodes/k8s_autoscale_node/#sample), [Shift](/kapacitor/v1.4/nodes/k8s_autoscale_node/#shift), [Sideload](/kapacitor/v1.4/nodes/k8s_autoscale_node/#sideload), [Spread](/kapacitor/v1.4/nodes/k8s_autoscale_node/#spread), [StateCount](/kapacitor/v1.4/nodes/k8s_autoscale_node/#statecount), [StateDuration](/kapacitor/v1.4/nodes/k8s_autoscale_node/#stateduration), [Stats](/kapacitor/v1.4/nodes/k8s_autoscale_node/#stats), [Stddev](/kapacitor/v1.4/nodes/k8s_autoscale_node/#stddev), [Sum](/kapacitor/v1.4/nodes/k8s_autoscale_node/#sum), [SwarmAutoscale](/kapacitor/v1.4/nodes/k8s_autoscale_node/#swarmautoscale), [Top](/kapacitor/v1.4/nodes/k8s_autoscale_node/#top), [Union](/kapacitor/v1.4/nodes/k8s_autoscale_node/#union), [Where](/kapacitor/v1.4/nodes/k8s_autoscale_node/#where), [Window](/kapacitor/v1.4/nodes/k8s_autoscale_node/#window)

---

### Description

[K8sAutoscaleNode](/kapacitor/v1.4/nodes/k8s_autoscale_node/) triggers autoscale events for a resource on a Kubernetes cluster.
The node also outputs points for the triggered events.

Example:


```javascript
     // Target 100 requests per second per host
     var target = 100.0
     var min = 1
     var max = 100
     var period = 5m
     var every = period
     stream
         |from()
             .measurement('requests')
             .groupBy('host', 'deployment')
             .truncate(1s)
         |derivative('value')
             .as('requests_per_second')
             .unit(1s)
             .nonNegative()
         |groupBy('deployment')
         |sum('requests_per_second')
             .as('total_requests')
         |window()
             .period(period)
             .every(every)
         |mean('total_requests')
             .as('total_requests')
         |k8sAutoscale()
             // Get the name of the deployment from the 'deployment' tag.
             .resourceNameTag('deployment')
             .min(min)
             .max(max)
             // Set the desired number of replicas based on target.
             .replicas(lambda: int(ceil("total_requests" / target)))
         |influxDBOut()
             .database('deployments')
             .measurement('scale_events')
             .precision('s')
```


The above example computes the requests per second by deployment and host.
Then the total_requests per second across all hosts is computed per deployment.
Using the mean of the total_requests over the last time period a desired number of replicas is computed
based on the target number of request per second per host.

If the desired number of replicas has changed, Kapacitor makes the appropriate API call to Kubernetes
to update the replicas spec.

Any time the k8sAutoscale node changes a replica count, it emits a point.
The point is tagged with the namespace, kind and resource name,
using the NamespaceTag, KindTag, and ResourceTag properties respectively.
In addition the group by tags will be preserved on the emitted point.
The point contains two fields: `old`, and `new` representing change in the replicas.

Available Statistics:

* increase_events -- number of times the replica count was increased.
* decrease_events -- number of times the replica count was decreased.
* cooldown_drops -- number of times an event was dropped because of a cooldown timer.
* errors -- number of errors encountered, typically related to communicating with the Kubernetes API.



<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

## Properties

Property methods modify state on the calling node.
They do not add another node to the pipeline, and always return a reference to the calling node.
Property methods are marked using the `.` operator.


### Cluster

Cluster is the name of the Kubernetes cluster to use.


```javascript
k8sAutoscale.cluster(value string)
```

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>


### CurrentField

CurrentField is the name of a field into which the current replica count will be set as an int.
If empty no field will be set.
Useful for computing deltas on the current state.

Example:


```javascript
    |k8sAutoscale()
        .currentField('replicas')
        // Increase the replicas by 1 if the qps is over the threshold
        .replicas(lambda: if("qps" > threshold, "replicas" + 1, "replicas"))
```



```javascript
k8sAutoscale.currentField(value string)
```

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>


### DecreaseCooldown

Only one decrease event can be triggered per resource every DecreaseCooldown interval.


```javascript
k8sAutoscale.decreaseCooldown(value time.Duration)
```

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>


### IncreaseCooldown

Only one increase event can be triggered per resource every IncreaseCooldown interval.


```javascript
k8sAutoscale.increaseCooldown(value time.Duration)
```

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>


### Kind

Kind is the type of resources to autoscale.
Currently only "deployments", "replicasets" and "replicationcontrollers" are supported.
Default: "deployments"


```javascript
k8sAutoscale.kind(value string)
```

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>


### KindTag

KindTag is the name of a tag to use when tagging emitted points with the kind.
If empty the point will not be tagged with the resource.
Default: kind


```javascript
k8sAutoscale.kindTag(value string)
```

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>


### Max

The maximum scale factor to set.
If 0 then there is no upper limit.
Default: 0, a.k.a no limit.


```javascript
k8sAutoscale.max(value int64)
```

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>


### Min

The minimum scale factor to set.
Default: 1


```javascript
k8sAutoscale.min(value int64)
```

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>


### Namespace

Namespace is the namespace of the resource, if empty the default namespace will be used.


```javascript
k8sAutoscale.namespace(value string)
```

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>


### NamespaceTag

NamespaceTag is the name of a tag to use when tagging emitted points with the namespace.
If empty the point will not be tagged with the resource.
Default: namespace


```javascript
k8sAutoscale.namespaceTag(value string)
```

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>


### Quiet

Suppress errors during execution.

```javascript
k8sAutoscale.quiet()
```

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>


### Replicas

Replicas is a lambda expression that should evaluate to the desired number of replicas for the resource.


```javascript
k8sAutoscale.replicas(value ast.LambdaNode)
```

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>


### ResourceName

ResourceName is the name of the resource to autoscale.


```javascript
k8sAutoscale.resourceName(value string)
```

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>


### ResourceNameTag

ResourceNameTag is the name of a tag that names the resource to autoscale.


```javascript
k8sAutoscale.resourceNameTag(value string)
```

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>


### ResourceTag

ResourceTag is the name of a tag to use when tagging emitted points the resource.
If empty the point will not be tagged with the resource.
Default: resource


```javascript
k8sAutoscale.resourceTag(value string)
```

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>


## Chaining Methods

Chaining methods create a new node in the pipeline as a child of the calling node.
They do not modify the calling node.
Chaining methods are marked using the `|` operator.


### Alert

Create an alert node, which can trigger alerts.


```javascript
k8sAutoscale|alert()
```

Returns: [AlertNode](/kapacitor/v1.4/nodes/alert_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Barrier

Create a new Barrier node that emits a BarrierMessage periodically

One BarrierMessage will be emitted every period duration


```javascript
k8sAutoscale|barrier()
```

Returns: [BarrierNode](/kapacitor/v1.4/nodes/barrier_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Bottom

Select the bottom `num` points for `field` and sort by any extra tags or fields.


```javascript
k8sAutoscale|bottom(num int64, field string, fieldsAndTags ...string)
```

Returns: [InfluxQLNode](/kapacitor/v1.4/nodes/influx_q_l_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Combine

Combine this node with itself. The data are combined on timestamp.


```javascript
k8sAutoscale|combine(expressions ...ast.LambdaNode)
```

Returns: [CombineNode](/kapacitor/v1.4/nodes/combine_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Count

Count the number of points.


```javascript
k8sAutoscale|count(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.4/nodes/influx_q_l_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### CumulativeSum

Compute a cumulative sum of each point that is received.
A point is emitted for every point collected.


```javascript
k8sAutoscale|cumulativeSum(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.4/nodes/influx_q_l_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Deadman

Helper function for creating an alert on low throughput, a.k.a. deadman's switch.

- Threshold -- trigger alert if throughput drops below threshold in points/interval.
- Interval -- how often to check the throughput.
- Expressions -- optional list of expressions to also evaluate. Useful for time of day alerting.

Example:


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    data
        |deadman(100.0, 10s)
    //Do normal processing of data
    data...
```

The above is equivalent to this
Example:


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    data
        |stats(10s)
            .align()
        |derivative('emitted')
            .unit(10s)
            .nonNegative()
        |alert()
            .id('node \'stream0\' in task \'{{ .TaskName }}\'')
            .message('{{ .ID }} is {{ if eq .Level "OK" }}alive{{ else }}dead{{ end }}: {{ index .Fields "emitted" | printf "%0.3f" }} points/10s.')
            .crit(lambda: "emitted" <= 100.0)
    //Do normal processing of data
    data...
```

The `id` and `message` alert properties can be configured globally via the 'deadman' configuration section.

Since the [AlertNode](/kapacitor/v1.4/nodes/alert_node/) is the last piece it can be further modified as usual.
Example:


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    data
        |deadman(100.0, 10s)
            .slack()
            .channel('#dead_tasks')
    //Do normal processing of data
    data...
```

You can specify additional lambda expressions to further constrain when the deadman's switch is triggered.
Example:


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    // Only trigger the alert if the time of day is between 8am-5pm.
    data
        |deadman(100.0, 10s, lambda: hour("time") >= 8 AND hour("time") <= 17)
    //Do normal processing of data
    data...
```



```javascript
k8sAutoscale|deadman(threshold float64, interval time.Duration, expr ...ast.LambdaNode)
```

Returns: [AlertNode](/kapacitor/v1.4/nodes/alert_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Default

Create a node that can set defaults for missing tags or fields.


```javascript
k8sAutoscale|default()
```

Returns: [DefaultNode](/kapacitor/v1.4/nodes/default_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Delete

Create a node that can delete tags or fields.


```javascript
k8sAutoscale|delete()
```

Returns: [DeleteNode](/kapacitor/v1.4/nodes/delete_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Derivative

Create a new node that computes the derivative of adjacent points.


```javascript
k8sAutoscale|derivative(field string)
```

Returns: [DerivativeNode](/kapacitor/v1.4/nodes/derivative_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Difference

Compute the difference between points independent of elapsed time.


```javascript
k8sAutoscale|difference(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.4/nodes/influx_q_l_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Distinct

Produce batch of only the distinct points.


```javascript
k8sAutoscale|distinct(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.4/nodes/influx_q_l_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Ec2Autoscale

Create a node that can trigger autoscale events for a ec2 autoscalegroup.


```javascript
k8sAutoscale|ec2Autoscale()
```

Returns: [Ec2AutoscaleNode](/kapacitor/v1.4/nodes/ec2_autoscale_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Elapsed

Compute the elapsed time between points


```javascript
k8sAutoscale|elapsed(field string, unit time.Duration)
```

Returns: [InfluxQLNode](/kapacitor/v1.4/nodes/influx_q_l_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Eval

Create an eval node that will evaluate the given transformation function to each data point.
A list of expressions may be provided and will be evaluated in the order they are given.
The results are available to later expressions.


```javascript
k8sAutoscale|eval(expressions ...ast.LambdaNode)
```

Returns: [EvalNode](/kapacitor/v1.4/nodes/eval_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### First

Select the first point.


```javascript
k8sAutoscale|first(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.4/nodes/influx_q_l_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Flatten

Flatten points with similar times into a single point.


```javascript
k8sAutoscale|flatten()
```

Returns: [FlattenNode](/kapacitor/v1.4/nodes/flatten_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### GroupBy

Group the data by a set of tags.

Can pass literal * to group by all dimensions.
Example:


```javascript
    |groupBy(*)
```



```javascript
k8sAutoscale|groupBy(tag ...interface{})
```

Returns: [GroupByNode](/kapacitor/v1.4/nodes/group_by_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### HoltWinters

Compute the holt-winters (https://docs.influxdata.com/influxdb/latest/query_language/functions/#holt-winters) forecast of a data set.


```javascript
k8sAutoscale|holtWinters(field string, h int64, m int64, interval time.Duration)
```

Returns: [InfluxQLNode](/kapacitor/v1.4/nodes/influx_q_l_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### HoltWintersWithFit

Compute the holt-winters (https://docs.influxdata.com/influxdb/latest/query_language/functions/#holt-winters) forecast of a data set.
This method also outputs all the points used to fit the data in addition to the forecasted data.


```javascript
k8sAutoscale|holtWintersWithFit(field string, h int64, m int64, interval time.Duration)
```

Returns: [InfluxQLNode](/kapacitor/v1.4/nodes/influx_q_l_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### HttpOut

Create an HTTP output node that caches the most recent data it has received.
The cached data are available at the given endpoint.
The endpoint is the relative path from the API endpoint of the running task.
For example, if the task endpoint is at `/kapacitor/v1/tasks/<task_id>` and endpoint is
`top10`, then the data can be requested from `/kapacitor/v1/tasks/<task_id>/top10`.


```javascript
k8sAutoscale|httpOut(endpoint string)
```

Returns: [HTTPOutNode](/kapacitor/v1.4/nodes/http_out_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### HttpPost

Creates an HTTP Post node that POSTS received data to the provided HTTP endpoint.
HttpPost expects 0 or 1 arguments. If 0 arguments are provided, you must specify an
endpoint property method.


```javascript
k8sAutoscale|httpPost(url ...string)
```

Returns: [HTTPPostNode](/kapacitor/v1.4/nodes/http_post_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### InfluxDBOut

Create an influxdb output node that will store the incoming data into InfluxDB.


```javascript
k8sAutoscale|influxDBOut()
```

Returns: [InfluxDBOutNode](/kapacitor/v1.4/nodes/influx_d_b_out_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Join

Join this node with other nodes. The data are joined on timestamp.


```javascript
k8sAutoscale|join(others ...Node)
```

Returns: [JoinNode](/kapacitor/v1.4/nodes/join_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### K8sAutoscale

Create a node that can trigger autoscale events for a kubernetes cluster.


```javascript
k8sAutoscale|k8sAutoscale()
```

Returns: [K8sAutoscaleNode](/kapacitor/v1.4/nodes/k8s_autoscale_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### KapacitorLoopback

Create an kapacitor loopback node that will send data back into Kapacitor as a stream.


```javascript
k8sAutoscale|kapacitorLoopback()
```

Returns: [KapacitorLoopbackNode](/kapacitor/v1.4/nodes/kapacitor_loopback_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Last

Select the last point.


```javascript
k8sAutoscale|last(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.4/nodes/influx_q_l_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Log

Create a node that logs all data it receives.


```javascript
k8sAutoscale|log()
```

Returns: [LogNode](/kapacitor/v1.4/nodes/log_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Mean

Compute the mean of the data.


```javascript
k8sAutoscale|mean(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.4/nodes/influx_q_l_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Median

Compute the median of the data. Note, this method is not a selector,
if you want the median point use `.percentile(field, 50.0)`.


```javascript
k8sAutoscale|median(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.4/nodes/influx_q_l_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Mode

Compute the mode of the data.


```javascript
k8sAutoscale|mode(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.4/nodes/influx_q_l_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### MovingAverage

Compute a moving average of the last window points.
No points are emitted until the window is full.


```javascript
k8sAutoscale|movingAverage(field string, window int64)
```

Returns: [InfluxQLNode](/kapacitor/v1.4/nodes/influx_q_l_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Percentile

Select a point at the given percentile. This is a selector function, no interpolation between points is performed.


```javascript
k8sAutoscale|percentile(field string, percentile float64)
```

Returns: [InfluxQLNode](/kapacitor/v1.4/nodes/influx_q_l_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Sample

Create a new node that samples the incoming points or batches.

One point will be emitted every count or duration specified.


```javascript
k8sAutoscale|sample(rate interface{})
```

Returns: [SampleNode](/kapacitor/v1.4/nodes/sample_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Shift

Create a new node that shifts the incoming points or batches in time.


```javascript
k8sAutoscale|shift(shift time.Duration)
```

Returns: [ShiftNode](/kapacitor/v1.4/nodes/shift_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Sideload

Create a node that can load data from external sources


```javascript
k8sAutoscale|sideload()
```

Returns: [SideloadNode](/kapacitor/v1.4/nodes/sideload_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Spread

Compute the difference between `min` and `max` points.


```javascript
k8sAutoscale|spread(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.4/nodes/influx_q_l_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### StateCount

Create a node that tracks number of consecutive points in a given state.


```javascript
k8sAutoscale|stateCount(expression ast.LambdaNode)
```

Returns: [StateCountNode](/kapacitor/v1.4/nodes/state_count_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### StateDuration

Create a node that tracks duration in a given state.


```javascript
k8sAutoscale|stateDuration(expression ast.LambdaNode)
```

Returns: [StateDurationNode](/kapacitor/v1.4/nodes/state_duration_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Stats

Create a new stream of data that contains the internal statistics of the node.
The interval represents how often to emit the statistics based on real time.
This means the interval time is independent of the times of the data points the source node is receiving.


```javascript
k8sAutoscale|stats(interval time.Duration)
```

Returns: [StatsNode](/kapacitor/v1.4/nodes/stats_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Stddev

Compute the standard deviation.


```javascript
k8sAutoscale|stddev(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.4/nodes/influx_q_l_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Sum

Compute the sum of all values.


```javascript
k8sAutoscale|sum(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.4/nodes/influx_q_l_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### SwarmAutoscale

Create a node that can trigger autoscale events for a docker swarm cluster.


```javascript
k8sAutoscale|swarmAutoscale()
```

Returns: [SwarmAutoscaleNode](/kapacitor/v1.4/nodes/swarm_autoscale_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Top

Select the top `num` points for `field` and sort by any extra tags or fields.


```javascript
k8sAutoscale|top(num int64, field string, fieldsAndTags ...string)
```

Returns: [InfluxQLNode](/kapacitor/v1.4/nodes/influx_q_l_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Union

Perform the union of this node and all other given nodes.


```javascript
k8sAutoscale|union(node ...Node)
```

Returns: [UnionNode](/kapacitor/v1.4/nodes/union_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Where

Create a new node that filters the data stream by a given expression.


```javascript
k8sAutoscale|where(expression ast.LambdaNode)
```

Returns: [WhereNode](/kapacitor/v1.4/nodes/where_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>

### Window

Create a new node that windows the stream by time.

NOTE: Window can only be applied to stream edges.


```javascript
k8sAutoscale|window()
```

Returns: [WindowNode](/kapacitor/v1.4/nodes/window_node/)

<a class="top" href="javascript:document.getElementsByClassName('article-heading')[0].scrollIntoView();" title="top"><span class="icon arrow-up"></span></a>
